[package]
name = "axumx"
description = "Axum extensions for building consistent APIs — responses, errors, pagination, middleware."
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["macros"] }
serde = { version = "1", features = ["derive"] }